Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1149,7 +1149,8 @@
     "3,\n",
     "2,\n",
     "0]\n",
-    "print(population)\n"
+    "print(population)\n",
+    "city_populations=\n"
    ]
   },
   {
