--- a/index.ipynb
+++ b/index.ipynb
@@ -1150,7 +1150,8 @@
     "2,\n",
     "0]\n",
     "print(population)\n",
-    "city_populations=\n"
+    "city_populations=[]\n",
+    "for y\n"
    ]
   },
   {
