Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1151,7 +1151,8 @@
     "0]\n",
     "print(population)\n",
     "city_populations=[]\n",
-    "for y\n"
+    "for y in population:\n",
+    "    \n"
    ]
   },
   {
