Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1152,7 +1152,7 @@
     "print(population)\n",
     "city_populations=[]\n",
     "for y in population:\n",
-    "    city_populations.append(f '{y}'+\"for:\"+)\n"
+    "    city_populations.append(f '{y}'+\"for:\"+city_names)\n"
    ]
   },
   {
