--- a/index.ipynb
+++ b/index.ipynb
@@ -1125,15 +1125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-33e79e104b8f>, line 16)",
+     "evalue": "invalid syntax (<ipython-input-5-4ebfbb65717a>, line 16)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-33e79e104b8f>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    city_populations.append(f '{y}'+\"for:\"+city_names[y])\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-4ebfbb65717a>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    city_populations.append(f {y} + \"for:\"+city_names[y])\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1153,7 +1153,7 @@
     "print(population)\n",
     "city_populations=[]\n",
     "for y in population:\n",
-    "    city_populations.append(f '{y}' +\"for:\"+city_names[y])\n"
+    "    city_populations.append(f {y} + \"for:\"+city_names[y])\n"
    ]
   },
   {
