--- a/index.ipynb
+++ b/index.ipynb
@@ -1153,7 +1153,7 @@
     "print(population)\n",
     "city_populations=[]\n",
     "for y in population:\n",
-    "    city_populations.append(f {y} + \"for:\"+city_names[y])\n"
+    "    city_populations.append(f'{y}'' + \"for:\"+city_names[y])\n"
    ]
   },
   {
