--- a/index.ipynb
+++ b/index.ipynb
@@ -1125,15 +1125,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-4ebfbb65717a>, line 16)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'city_names' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-4ebfbb65717a>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    city_populations.append(f {y} + \"for:\"+city_names[y])\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-be9ed4e5352a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mcity_populations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mcity_populations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{y}'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"for:\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mcity_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'city_names' is not defined"
      ]
     }
    ],
@@ -1153,7 +1163,7 @@
     "print(population)\n",
     "city_populations=[]\n",
     "for y in population:\n",
-    "    city_populations.append(f'{y}'' + \"for:\"+city_names[y])\n"
+    "    city_populations.append(f'{y}' + \"for:\"+city_names[y])\n"
    ]
   },
   {
