Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1163,7 +1163,8 @@
     "print(population)\n",
     "city_populations=[]\n",
     "for y in population:\n",
-    "    city_populations.append(f'{y}' + \"for:\"+city_names[y])\n"
+    "    city_populations.append(f'{y}' + \"for:\"+city_names[y])\n",
+    "print()\n"
    ]
   },
   {
